--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-size: cover;
-  background-position: center;
+  background-color: #808080; /* 这里设置了背景颜色为灰色 */
   color: white;
   text-align: center;
   padding-top: 10%;
