--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #808080; /* 这里设置了背景颜色为灰色 */
-  color: white;
+  background-color: #808080;
+  color: #00FF00;
   text-align: center;
   padding-top: 10%;
 }
@@ -23,7 +23,7 @@ body {
 </style>
 </head>
 <body>
-<a href="https://b23.tv/osJhv0b" style="color: white; text-decoration: none;"><h1>这是我的个人空间</h1></a>
+<a href="https://b23.tv/osJhv0b" style="color: #00FF00; text-decoration: none;"><h1>这是我的个人空间</h1></a>
 <div id="time"></div>
 <div id="welcome">欢迎来到测试网站</div>
 <script>
