--- a/index.html
+++ b/index.html
@@ -3,25 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>我的个人空间</title>
-<link rel="stylesheet" href="styles.css"> <!-- 这里链接到您的 CSS 文件 -->
-<style>
-body {
-  margin: 0;
-  font-family: 'Arial', sans-serif;
-  background-color: #808080;
-  color: #00FF00;
-  text-align: center;
-  padding-top: 10%;
-}
-#time {
-  font-size: 2em;
-  margin-top: 20px;
-}
-#welcome {
-  margin-top: 20px;
-  font-size: 1.5em;
-}
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <a href="https://b23.tv/osJhv0b" style="color: #00FF00; text-decoration: none;"><h1>这是我的个人空间</h1></a>
@@ -37,8 +19,9 @@ body {
     <li><a href="#">主页</a></li>
     <li><a href="#">今日图片</a></li>
     <li><a href="#">(更新中)</a></li>
+    <li><a href="https://b23.tv/5Dfj1x3">某位勇者</a></li>
   </ul>
 </nav>
-<script src="scripts.js"></script> <!-- 这里链接到您的 JavaScript 文件 -->
+<script src="scripts.js"></script>
 </body>
 </html>
