--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>我的个人空间</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css"> <!-- 这里链接到您的 CSS 文件 -->
 </head>
 <body>
 <a href="https://b23.tv/osJhv0b" style="color: #00FF00; text-decoration: none;"><h1>这是我的个人空间</h1></a>
@@ -19,9 +19,9 @@
     <li><a href="#">主页</a></li>
     <li><a href="#">今日图片</a></li>
     <li><a href="#">(更新中)</a></li>
-    <li><a href="https://b23.tv/5Dfj1x3">某位勇者</a></li>
+    <li><a href="https://b23.tv/5Dfj1x3">某位勇者</a></li> <!-- 新加的导航项 -->
   </ul>
 </nav>
-<script src="scripts.js"></script>
+<script src="scripts.js"></script> <!-- 这里链接到您的 JavaScript 文件 -->
 </body>
 </html>
