--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><a href="#">主页</a></li>
     <li><a href="#">今日图片</a></li>
     <li><a href="#">(更新中)</a></li>
-    <li><a href="https://b23.tv/5Dfj1x3">某位勇者</a></li> <!-- 新加的导航项 -->
+    <li><a href="https://b23.tv/5Dfj1x3">某位勇者(点击跳转)</a></li> <!-- 新加的导航项 -->
     <li><a href="#">↑微信号Harry3157</a></li>
   </ul>
 </nav>
